--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "description": "API Listar Tests",
     "main": "app.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/APPSERPRO/BACK_END_APP_SERPRO.git"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node app.js"
